@@ -9,6 +9,7 @@ Changes in 4.0:
 - Ignore diskspace check when it cannot be determined on a gvfs mounted filesystem (187141)
 - DHT can no longer be disabled at compile time
 - Add support for magnet URL's (214375)
+- Fix crash due to uncaught warning 
 
 Changes in 3.3.2:
 - Fix crash when loading Feed in syndication plugin at startup (216207)
